# models/BankAccount.py
@@ -1,8 +1,9 @@
 import uuid
 
+
 class BankAccount:
-    def __init__(self, user_id: str, bank_name: str, account_number: str, balance: float):
-        self.id = str(uuid.uuid1())
+    def __init__(self, id: str, user_id: str, bank_name: str, account_number: str, balance: float):
+        self.id = id
         self.user_id = user_id
         self.bank_name = bank_name
         self.account_number = account_number
